portfolio/portfolio/static/css/portfolio.css
:root {
    --background-color: #1d2935;
    --text-color: #eaecef;
    --black: #1b1d23;
    --dark-grey: #282c34cc;
    --light-grey: #e2e2e2cc;
    --green: #23d188;
    --cyan: #28b8db;
    --magenta: #ff0d8a;
    --light-magenta: #ff33b8;
}

body {
    font-family: "Exo 2", sans-serif;
    font-weight: 200;
}

body.template-homepage {
    background-color: var(--background-color);
    color: var(--text-color);
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.help-text {
    color: var(--light-grey);
    font-size: 70%;
}

.jarallax {
    position: relative;
    z-index: 0;
    margin-bottom: 2em;
}

.jarallax>.jarallax-window {
    position: absolute;
    object-fit: cover;
    top: 0;
    left: 0;
    z-index: -100;
}

.jarallax>.jarallax-window>div {
    min-height: 100em;
}

.center {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.parallax-text {
    min-height: 50rem;
}

.navbar {
    position: fixed;
    z-index: 1000;
    top: 0;
    width: 100%;
    height: 3em;
    padding: 0 1em 0 1em;
}

.nav-link {
    height: 3em;
    margin: 0;
    background: var(--dark-grey);
}

.navbar-dark .navbar-nav .nav-link:hover {
    color: var(--magenta);
}

.navbar-dark .navbar-nav .nav-link.active {
    color: var(--magenta);
    background: var(--black);
    font-weight: 700;
}

.darknav {
    background: var(--dark-grey);
    color: var(--text-color);
}

.content-container {
    margin-top: 3em;
}

form {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    margin: auto;
}

.form-container {
    display: inline-block;
    justify-content: center;
    align-items: center;
    padding: 5em;
    width: 100%;
    margin-bottom: 5rem;
    background: var(--dark-grey);
}

.form-header {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 10rem;
}

.invalid-feedback {
    display: block;
    width: 100%;
}

.errorlist {
    padding: 0;
    width: 100%;
    margin: 0;
}

.mask {
    position: block;
    left: 0;
    background: var(--black);
    opacity: 80%;
    z-index: 2;
}

.parallax-window .mask {
    height: 100vh;
}

span.accent {
    color: var(--magenta);
    font-size: 150%;
    font-weight: 700;
}

label {
    display: flex;
    margin-right: 20px;
}

ul {
    list-style-type: none;
}

input[type="radio"],
input[type="checkbox"] {
    margin-right: 0.5em;
    margin-top: 0.25em;
}

.box-shadow {
    box-shadow: 1em 1em 1em var(--black);
}

.grid-right {
    height: 100%;
    width: 90%;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    grid-gap: 18px;
    grid-template-areas: "featured featured side1" "featured featured side2" "featured featured side3";
}

.grid-left {
    height: 100%;
    width: 90%;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    grid-gap: 18px;
    grid-template-areas: "side1 featured featured" "side2 featured featured" "side3 featured featured";
}

.featured {
    height: 600px;
    grid-area: featured;
}

.side1 {
    grid-area: side1;
}

.side2 {
    grid-area: side2;
}

.side3 {
    grid-area: side3;
}

.text-post {
    background-color: var(--dark-grey);
    padding: 2em;
}

.blog-section {
    margin-top: 1em;
    width: 100%;
}

.image-post .mask {
    height: 100%;
}

.image-post:hover,
.text-post:hover {
    box-shadow: 1em 1em 0.5em var(--black);
}

.post-header {
    font-weight: 700;
}

.post-description {
    font-size: 85%;
}

.post-date {
    font-size: 12px;
    font-style: italic;
}

a {
    color: var(--text-color);
}

a:hover {
    color: var(--magenta);
}

a:focus {
    color: var(--magenta);
}

.flex-section {
    margin: 1em;
}

blockquote {
    background-color: var(--dark-grey);
    width: 80%;
    padding: 2em;
    font-style: italic;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    box-shadow: 1em 1em .5em var(--black);
    font-size: 120%;
}

